# High-Performance-Matrix-Acceleration-Library-for-Apple-M2-Architecture

./: .gitignore  BENCHMARK_REPORT.md  CHANGELOG.md  CMakeLists.txt  DESIGN_DECISIONS.md  GITHUB_README.md  PROJECT_COMPLETION.md  README.md
.github/workflows/: ci.yml
benchmarks/: benchmark_suite.cpp  benchmark_suite.hpp  latency_profile.cpp  matrix_benchmarks.cpp
examples/: alphazero_inference_sim.cpp  basic_matmul.cpp  simple_test.cpp  speedup_demo.cpp
include/: metal_float16_accelerator.hpp
src/: metal_float16_accelerator.cpp
src/core/: buffer_pool.hpp  dispatcher.hpp  metal_device.cpp  metal_device.hpp  metal_engine.cpp  metal_engine.hpp  performance_observer.hpp  slab_buffer_pool.hpp  telemetry_aggregator.hpp  warmup_calibrator.hpp  watchdog.hpp
src/matrix/: cpu_optimizer.cpp  float16_matrix.cpp  float16_matrix.hpp  kernels.metal  matrix_ops.cpp  matrix_ops.hpp
src/src/matrix/: kernels.metal
src/tests/: chaos_tester.hpp
src/utils/: logger.hpp  result.hpp
tests/: correctness_tests.cpp
tools/: alphazero_benchmark.py  bench_report.py
